--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12"
+    "express-validator": "^6.12.1",
+    "nodemon": "^2.0.12",
+    "validator": "^13.6.0"
   }
 }
